# esp-idf-analog-joystick

./: README.md
main/: joy_stick.c  main.c  web_client.c
mario/: CMakeLists.txt  README.md
mario/html/: main.css  main.js  root.html
mario/main/: CMakeLists.txt  joy_stick.c  main.c  web_client.c  web_server.c
pose/: README.md
pose/html/: root.html
pose/main/: CMakeLists.txt  Kconfig.projbuild  joy_stick.c  main.c
position/: README.md
position/html/: main.css  main.js  root.html
position/main/: CMakeLists.txt  Kconfig.projbuild  joy_stick.c  nvs.c  web_client.c
